[fix] - trip converter fixed and done